<resources>
    <string name="app_name">Template</string>
    <string name="session_expired">Session Expired!</string>
    <string name="ok">Ok</string>
    <string name="home">Home</string>
    <string name="support">Support</string>
    <string name="policy">Privacy Policy</string>
    <string name="terms_condition"><![CDATA[Terms & Conditions]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="don_apos_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="let_s_sign_you_in">Let’s Sign You In</string>
    <string name="welcome_back_you_ve_been_missed">Welcome back, you’ve been missed</string>
    <string name="your_email">"Your Email or Phone number"</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="or">OR</string>
    <string name="profile">Profile</string>
    <string name="bookings">Bookings</string>
    <string name="earnings">Earnings</string>
    <string name="notifications">Notifications</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="offline">Offline</string>
    <string name="you_are_offline"><b>You are offline!</b><br>\nGo online to start accepting rides!</br></string>
    <string name="documents">Documents</string>
    <string name="driving_licence_front_side">Driving Licence<br>\nFront Side</br></string>
    <string name="driving_licence_back_side">Driving Licence<br>\nBack Side</br></string>
    <string name="driving_license_uploading">Driving License Uploading</string>
    <string name="license_uploading_text_placeholder">Your license is with us and we are reviewing it for verification purposes.</string>
    <string name="upload_next_document">Upload next document</string>
    <string name="transport_modle">Transport Modle</string>
    <string name="color">Color</string>
    <string name="vehicle_registration_no">Vehicle registration no</string>
    <string name="vehicle_no">Vehicle no</string>
    <string name="fule_type">Fule type</string>
    <string name="submit">Submit</string>
    <string name="vehicle_registration">Vehicle Registration</string>
    <string name="welcome">Welcome</string>
    <string name="enter_the_email_associated_with_your_account_to_reset_your_password">"Enter the Email associated with your account  to reset your password. "</string>
    <string name="getting_started">Getting Started</string>
    <string name="create_an_account_to_continue">Create an account to continue</string>
    <string name="your_phone">Your Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="otp_authentication">"OTP Authentication "</string>
    <string name="an_authentication_code_has_been_sent_to_91_999_999_999_0">An Authentication Code has been sent to (+91) 999 999 999 0</string>
    <string name="resend">Resend</string>
    <string name="first_name">First Name</string>
    <string name="country_state_city">Country, State, City</string>
    <string name="last_name">Last Name</string>
    <string name="you_made_kes_29_05_payment_to_connor_chavez_for_your_ride">You made KES 29.05 payment to Connor Chavez for your ride</string>
    <string name="recent">Recent</string>
    <string name="older_notification">Older notification</string>
    <string name="online">Online</string>
    <string name="username">Username</string>
    <string name="your_vehicle">Your Vehicle</string>
    <string name="accept">Accept</string>
    <string name="ignore">Ignore</string>
    <string name="type_a_message">Type a message</string>
    <string name="exit_message">Are you sure, You want to exit?</string>
    <string name="cancel">Cancel</string>
    <string name="profile_setup">Profile Setup</string>
    <string name="are_your_sure_want_to_logout">Are you sure, You want to Logout?</string>
    <string name="save">Save</string>
    <string name="reenter_password">Re-enter password</string>
    <string name="new_password">New password</string>
    <string name="current_password">Current Password</string>
    <string name="change_password">Change Password</string>
    <string name="some_error_occured">Some error occurred!</string>
    <string name="your_device_offline">You are offline.</string>
    <string name="enter_email">Please enter email address</string>
    <string name="enter_valid_email">Please enter valid email address</string>
    <string name="enter_phone">Please enter phone  number</string>
    <string name="enter_valid_phone">Please enter valid phone number</string>
    <string name="select_country_code">Please select country code</string>
    <string name="enter_password">Please enter password</string>
    <string name="strong_password">Password must containg atleast one upper case, one special character, one numeric and must be of atleast 8 characters</string>
    <string name="enter_confirm_password">Please enter confirm password</string>
    <string name="password_does_not_match">Passwords does not match.</string>
    <string name="otp_resent">Otp resent successfully.</string>
    <string name="enter_first_name">Please enter first name</string>
    <string name="enter_last_name">Please enter last name</string>
    <string name="enter_address">Please enter address</string>
    <string name="signed_up_successfully">Signed Up Successfully.</string>
    <string name="logged_in_successfully">Logged in successfully.</string>
    <string name="enter_email_or_password">Please enter email or password</string>
    <string name="enter_valid_email_or_password">Please enter valid email address or phone number</string>
    <string name="enter_new_password">Please enter new password</string>
    <string name="confirm_new_password">Please confirm new password</string>
    <string name="enter_old_password">Please enter current password</string>
</resources>