<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.template.views.vehicleregistration.VehicleRegistrationVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:onClick="@{vm::onClick}"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/vehicle_registration"
                android:textColor="@color/_242a37"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/etTraspostMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:backgroundTint="#efefef"
            android:hint="@string/transport_modle"
            android:paddingVertical="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/clToolbar" />

        <EditText
            android:id="@+id/etColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="#efefef"
            android:hint="@string/color"
            android:paddingVertical="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/etTraspostMode" />

        <EditText
            android:id="@+id/etVehicleRegistrationNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="#efefef"
            android:hint="@string/vehicle_registration_no"
            android:paddingVertical="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/etColor" />

        <EditText
            android:id="@+id/etVehicleNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="#efefef"
            android:hint="@string/vehicle_no"
            android:paddingVertical="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/etVehicleRegistrationNo" />

        <EditText
            android:id="@+id/etFuleType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="#efefef"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/fule_type"
            android:paddingVertical="@dimen/_10sdp"
            android:textColor="#80242134"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/etVehicleNo" />

        <Button
            android:id="@+id/btSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_25sdp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center_horizontal"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:onClick="@{vm::onClick}"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/submit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>